Changes for 3.0.8rc1

New features:
.......PS. [ZBXNEXT-3681] improved bulk inserts for Oracle database backend (wiper)
........S. [ZBXNEXT-3669] optimized trigger expression batch processing to avoid recalculation of identical functions (wiper)
..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)

Bug fixes:
...G...... [ZBX-11568] fixed wrong number round for cpu statistics (abs)
........S. [ZBX-11781] fixed potential buffer overflow in the housekeeper process (abs)
.......PS. [ZBX-10902] fixed wrong averages in web monitoring if a web server doesn't respond to a request (abs)
..F....... [ZBX-11365] fixed button and multiselect positioning in action operations edit form (Ivo, Pavel)
.......PS. [ZBX-11655] fixed Oracle and MySQL column limit calculation when using UTF-8 (vso)
........S. [ZBX-11703] removed possibility to execute commit without transaction in processing LLD rules (Sergejs)
........S. [ZBX-11402] fixed unnecessary notification sending from dependent triggers (viktors)
.......PS. [ZBX-11587] fixed handling database failure during transaction commit (viktors)
A.F....... [ZBX-11698] fixed resolving of user macros with context wich are defined on host or template level (Sasha)
...G...... [ZBX-11621] fixed cause of error with EventID 5858 in Windows EventLog when using wmi.get key (viktors)
.......PS. [ZBX-11584] fixed selection of ntext data from Microsoft SQL Server using 'db.odbc.select' item key (Sergejs)
..F....... [ZBX-11492] fixed copying sharing properties while cloning slide shows (Cemeris, Sasha)
........S. [ZBX-11635] fixed possible deadlocks when removing obsolete VMWare services (Sergejs)
..F....... [ZBX-11661] prevented requesting all screens in slide show when slide show screens are deleted (Cemeris)
..F....... [ZBX-11527] fixed displaying maintenance icon for trigger element in maps (Cemeris)